@@ -37,4 +37,10 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs = [
+			"--add-opens=java.base/java.lang=ALL-UNNAMED",
+			"--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+			"--add-opens=java.base/java.util=ALL-UNNAMED",
+			"-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}"
+	]
 }
